# Julias_Portfolio

./: Basics_python.py  Mapping_vegetation_types.ipynb  README.md  Statistics.py  data_vis_geo.py  publications-list.html  style.css
Blender (3D visualisation)/: README.md
Blender (3D visualisation)/Donut/: README.md
HTML&CSS/: README.md
HTML&CSS/Resume/: README.md  index.html  publications-list.html  style.css
Python/: Basics.py  README.md  geodata-visualisation.py  numpy.py  pandas.py
Python/weather-station-analytics/: requirements.txt
Python/weather-station-analytics/src/: export.py  ingestion.py  transformation.py
Python/weather-station-analytics/streamlit_app/pages/: 3_Anomalies.py
R/: Vegetation_changes_from_field_and_satellite_data.ipynb
weather-station-analytics/: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
weather-station-analytics/.streamlit/: config.toml
weather-station-analytics/src/: aggregation.py  anomaly_detection.py  main.py
weather-station-analytics/src/ingestion/: __init__.py  convert_xlxs_to_csv.py
weather-station-analytics/src/transformation/: __init__.py  transform.py
weather-station-analytics/src/utils/: __init__.py  export.py
weather-station-analytics/streamlit_app/: Home.py
weather-station-analytics/streamlit_app/pages/: 1_Data_Explorer.py  2_Data_Quality.py  3_Anomalies.py
weather-station-analytics/streamlit_app/utils/: __init__.py  info_notes.py
